@@ -165,11 +165,9 @@ BANGLADESH
 #main_map
 <div class="map_wrap">
 	<div class="map_no_info">{map_no_info_text}</div>
-	<div class="map_info">
-ONLY {percent_of_activities_with_location}% OF ACTIVTIES HAVE PROVIDED EXACT LOCATIONS<br/>
-			{map_info_text}
-	</div>
 	<div id="map"></div>
+	<div class="map_info">{map_info_text}</div>
+	<div class="map_percent"><img src="{art}alert_icon.png" alt="{alert_icon_alt_text}" width="15" height="15"/><span>{percent_of_activities_with_location}%</span> of activities have provided exact locations.</div>
 </div>
 
 #main_stats
