@@ -4,6 +4,7 @@ Added title to Key Figures
 Added more icons
 Adding charts to main view
 SAVi change line-height in tables for better legibility
+Added Map% alert
 
 Development Portal (2014-03-31 shi)
 ==============================
